--- a/ChatBot.ipynb
+++ b/ChatBot.ipynb
@@ -294,29 +294,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61d4643f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize_history(history):\n",
-    "    new_hist = []\n",
-    "    for msg in history or []:\n",
-    "        if isinstance(msg, (list, tuple)) and len(msg) == 2:\n",
-    "            # supongamos que msg = (texto_usuario, texto_assistant)\n",
-    "            user_msg, assistant_msg = msg\n",
-    "            new_hist.append({\"role\": \"user\", \"content\": user_msg})\n",
-    "            new_hist.append({\"role\": \"assistant\", \"content\": assistant_msg})\n",
-    "        elif isinstance(msg, dict):\n",
-    "            new_hist.append(msg)\n",
-    "        else:\n",
-    "            # Caso inesperado: puedes ignorar o adaptarlo\n",
-    "            pass\n",
-    "    return new_hist\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a9f1a472",
    "metadata": {},
    "outputs": [],
@@ -412,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3e3dc87a",
    "metadata": {},
    "outputs": [
@@ -428,14 +405,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7907\n",
+      "* Running on local URL:  http://127.0.0.1:7909\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7907/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7909/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -448,7 +425,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 122,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -456,6 +433,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Modelo seleccionado: gemini\n",
+      "modelo: gemini-2.5-flash\n",
       "Modelo seleccionado: gemini\n",
       "modelo: gemini-2.5-flash\n",
       "Modelo seleccionado: gemini\n",
